looking further into translation

--- a/1-data-exploration-and-split.ipynb
+++ b/1-data-exploration-and-split.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "from transformers import MarianMTModel, MarianTokenizer"
+    "from transformers import pipeline, MarianMTModel, MarianTokenizer"
    ]
   },
   {
@@ -875,21 +875,67 @@
     "# can we use a sample to perform sentiment analysis?\n",
     "# but what about other the other languages when we want to do predictions?\n",
     "\n",
-    "class Translator:\n",
+    "# TODO make this adaptible to 'any' language\n",
+    "# e.g. if lang=='ru' then model = \"Helsinki-NLP/opus-mt-ru-en\"\n",
+    "# if no model exists then ...?\n",
+    "\n",
+    "# TODO check pipelines? they make the process easier\n",
+    "\n",
+    "class MultiLingualTranslator:\n",
     "    def __init__(self):\n",
-    "        self.model_name = \"Helsinki-NLP/opus-mt-en-ROMANCE\"  # model translates from romance languages to english\n",
-    "        self.model = self.load_model(self.model_name)\n",
-    "        self.tokenizer = self.load_tokenizer(self.model_name)\n",
+    "        # self.model_name = \"Helsinki-NLP/opus-mt-ROMANCE-en\"  # model translates from romance languages to english\n",
+    "        # self.model = self.load_model(self.model_name)\n",
+    "        # self.tokenizer = self.load_tokenizer(self.model_name\n",
+    "\n",
+    "        self.romance_languages = ['pt', 'fr', 'es', 'it', 'ro']\n",
+    "        self.loaded_models = {}\n",
+    "        self.loaded_tokenizers = {}\n",
+    "\n",
     "\n",
     "    def load_model(self, model_name):\n",
-    "        model = MarianMTModel.from_pretrained(model_name)\n",
+    "        if model_name not in self.loaded_models:\n",
+    "            try:\n",
+    "                model = MarianMTModel.from_pretrained(model_name)\n",
+    "                self.loaded_models[model_name] = model\n",
+    "            except:\n",
+    "                pass\n",
+    "        else:\n",
+    "            model = self.loaded_models[model_name]\n",
     "        return model\n",
     "\n",
     "    def load_tokenizer(self, model_name):\n",
-    "        tokenizer = MarianTokenizer.from_pretrained(model_name)\n",
+    "        if model_name not in self.loaded_models:\n",
+    "            try:\n",
+    "                tokenizer = MarianTokenizer.from_pretrained(model_name)\n",
+    "                self.loaded_tokenizers[model_name] = tokenizer\n",
+    "            except:\n",
+    "                pass\n",
+    "        else:\n",
+    "            tokenizer = self.loaded_tokenizers[model_name]\n",
     "        return tokenizer\n",
     "\n",
-    "translator = Translator()"
+    "    def get_model_name(self, input_language):\n",
+    "        if input_language in self.romance_languages:\n",
+    "            model_name = f\"Helsinki-NLP/opus-mt-ROMANCE-en\"\n",
+    "        else:\n",
+    "            model_name = f\"Helsinki-NLP/opus-mt-{input_language}-en\"\n",
+    "        return model_name\n",
+    "\n",
+    "    def translate_to_english(self, text, lang):\n",
+    "        if lang == 'en':\n",
+    "            return text\n",
+    "\n",
+    "        model_name = self.get_model_name(lang)\n",
+    "        model = self.load_model(model_name)\n",
+    "        tokenizer = self.load_tokenizer(model_name)\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        pass\n",
+    "\n",
+    "translator = MultiLingualTranslator()\n",
+    "\n",
+    "# how much time will this take?? is it even feasible ..."
    ]
   },
   {
