still looking into translation

--- a/1-data-exploration-and-split.ipynb
+++ b/1-data-exploration-and-split.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "from transformers import pipeline, MarianMTModel, MarianTokenizer"
+    "from transformers import pipeline, MarianMTModel, MarianTokenizer, AutoModelForSeq2SeqLM"
    ]
   },
   {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,6 @@
     "                               u\"\\U000024C2-\\U0001F251\"\n",
     "                               \"]+\", flags=re.UNICODE)\n",
     "    text = emoji_pattern.sub(r'', text)\n",
-    "    text = re.sub(r\"[^\\w\\s]\", '', text)  # Remove punctuation\n",
     "    return text\n",
     "\n",
     "\n",
@@ -606,6 +605,10 @@
     "    text = re.sub(r'#(\\w+)', '', text)\n",
     "    return text\n",
     "\n",
+    "def remove_or_replace_and(text):\n",
+    "    if '&' in text:\n",
+    "        text = re.sub(r'&', 'and', text)\n",
+    "\n",
     "\n",
     "def remove_numbers(text):\n",
     "    text = re.sub(r'\\d+', '', text)\n",
@@ -629,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +665,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# language detection - it helps that our data is somewhat clean\n",
+    "# cleaning\n",
     "\n",
     "train_info['clean_description'] = train_info['description'].apply(clean_text)\n",
     "train_info['clean_host_about'] = train_info['host_about'].apply(clean_text)\n",
@@ -695,6 +698,7 @@
    ],
    "source": [
     "# using the fasttext library to help detect language of text fields\n",
+    "# it is much faster than other popular libraries like langdetect\n",
     "\n",
     "# how to:\n",
     "# 1. go to: https://fasttext.cc/docs/en/language-identification.html\n",
@@ -797,6 +801,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total unique languages: 61\n"
+     ]
+    }
+   ],
+   "source": [
+    "# all unique languages\n",
+    "\n",
+    "uq_languages = set(\n",
+    "    list(description_languages.index) +\n",
+    "    list(host_about_languages.index) +\n",
+    "    list(comments_languages.index)\n",
+    ")\n",
+    "\n",
+    "print(f\"Total unique languages: {len(uq_languages)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ... and on the test set?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -857,85 +895,237 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- **N-Grams**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- **Text Translation to English**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of observations in english or languages that we can translate into english:\n",
+      "\tdescriptions: 0.9992\n",
+      "\thost_about: 0.9979\n",
+      "\tcomments: 0.9955\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what to do to languages that are not possible to translate?\n",
+    "\n",
+    "pretrained_translators_names = {\n",
+    "    'af': None,  # afrikaans\n",
+    "    'ar': None,  # arabic\n",
+    "    'ast': None, # asturian (no asturian, using romance)\n",
+    "    'az': None, # azerbaijani\n",
+    "    'bg': None, # bulgarian\n",
+    "    'bs': None, # bosnian\n",
+    "    'ca': None, # catalan\n",
+    "    'ceb': None, # cebuano\n",
+    "    'cs': None, # czech\n",
+    "    'da': 'Helsinki-NLP/opus-mt-da-en', # danish\n",
+    "    'de': 'Helsinki-NLP/opus-mt-en-de', # german\n",
+    "    'el': None, # greek\n",
+    "    'en': None, # english (no translation needed)\n",
+    "    'eo': None, # esperanto\n",
+    "    'es': 'Helsinki-NLP/opus-mt-ROMANCE-en', # spanish\n",
+    "    'et': None, # estonian\n",
+    "    'eu': None, # basque\n",
+    "    'fa': None, # persian\n",
+    "    'fi': None, # finnish\n",
+    "    'fr': 'Helsinki-NLP/opus-mt-ROMANCE-en', # french\n",
+    "    'fy': None, # frisian\n",
+    "    'ga': None, # irish\n",
+    "    'gl': None, # galecian\n",
+    "    'he': None, # hebrew\n",
+    "    'hr': None, # croatian\n",
+    "    'ht': None, # haitian creole\n",
+    "    'hu': None, # hungarian\n",
+    "    'ia': None, # interlingua\n",
+    "    'id': None, # indonesian\n",
+    "    'io': None, # ido\n",
+    "    'is': None, # icelandic\n",
+    "    'it': 'Helsinki-NLP/opus-mt-ROMANCE-en', # italian\n",
+    "    'ja': None, # japanese\n",
+    "    'jbo': None, # lojban\n",
+    "    'km': None, # khmer\n",
+    "    'kn': None, # kannada\n",
+    "    'la': None, # latin\n",
+    "    'lb': None, # luxembourghish\n",
+    "    'lt': None, # lithuanian\n",
+    "    'lv': None, # latvian\n",
+    "    'ms': None, # malay\n",
+    "    'nl': 'Helsinki-NLP/opus-mt-nl-en', # dutch\n",
+    "    'nn': None, # norwegian (nynorsk)\n",
+    "    'no': None, # norwegian\n",
+    "    'oc': None, # occitan\n",
+    "    'pl': 'Helsinki-NLP/opus-mt-pl-en', # polish\n",
+    "    'pt': 'Helsinki-NLP/opus-mt-ROMANCE-en', # portuguese\n",
+    "    'ro': 'Helsinki-NLP/opus-mt-ROMANCE-en', # romanian\n",
+    "    'ru': 'Helsinki-NLP/opus-mt-ru-en', # russsian\n",
+    "    'sco': None, # scots\n",
+    "    'sh': None, # serbo-croatian\n",
+    "    'sk': None, # slovak\n",
+    "    'sl': None, # slovenian\n",
+    "    'sr': None, # serbian\n",
+    "    'sv': None, # swedish\n",
+    "    'sw': None, # swahili\n",
+    "    'tr': None, # turkish\n",
+    "    'uk': None, # ukranian\n",
+    "    'vi': None, # vietnamese\n",
+    "    'wa': None, # walloon\n",
+    "    'zh': None # chinese\n",
+    "}\n",
+    "\n",
+    "able_to_translate = [k for k,v in pretrained_translators_names.items() if v is not None]\n",
+    "print('Proportion of observations in english or languages that we can translate into english:')\n",
+    "print(f\"\\tdescriptions: {sum([v for k,v in description_languages.items() if k in ['en'] + able_to_translate]) / sum(description_languages):.4f}\")\n",
+    "print(f\"\\thost_about: {sum([v for k,v in host_about_languages.items() if k in ['en'] + able_to_translate]) / sum(host_about_languages):.4f}\")\n",
+    "print(f\"\\tcomments: {sum([v for k,v in comments_languages.items() if k in ['en'] + able_to_translate]) / sum(comments_languages):.4f}\")\n",
+    "\n",
+    "# ... it seems that we are able to translate >99% of all the texts\n",
+    "# what if, if we use translation, we can just hard predict 'listed'\n",
+    "# (the majority class) for all instances where we can't translate?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "# possibility: https://huggingface.co/docs/transformers/model_doc/marian\n",
-    "\n",
-    "# the model translates from romance languages to english\n",
-    "# not all languages are romance languages but they account\n",
-    "# for at least 94% of data across any of the text columns\n",
+    "# multilingual translator: https://huggingface.co/datasets/Helsinki-NLP/opus-100\n",
     "\n",
     "# can we use a sample to perform sentiment analysis?\n",
     "# but what about other the other languages when we want to do predictions?\n",
     "\n",
-    "# TODO make this adaptible to 'any' language\n",
-    "# e.g. if lang=='ru' then model = \"Helsinki-NLP/opus-mt-ru-en\"\n",
-    "# if no model exists then ...?\n",
-    "\n",
-    "# TODO check pipelines? they make the process easier\n",
-    "\n",
     "class MultiLingualTranslator:\n",
-    "    def __init__(self):\n",
-    "        # self.model_name = \"Helsinki-NLP/opus-mt-ROMANCE-en\"  # model translates from romance languages to english\n",
-    "        # self.model = self.load_model(self.model_name)\n",
-    "        # self.tokenizer = self.load_tokenizer(self.model_name\n",
+    "    def __init__(self, pretrained_translators_names):\n",
+    "        self.pretrained_translators_names = pretrained_translators_names\n",
+    "        self.loaded_pipelines = {}\n",
     "\n",
-    "        self.romance_languages = ['pt', 'fr', 'es', 'it', 'ro']\n",
-    "        self.loaded_models = {}\n",
-    "        self.loaded_tokenizers = {}\n",
-    "\n",
-    "\n",
-    "    def load_model(self, model_name):\n",
-    "        if model_name not in self.loaded_models:\n",
-    "            try:\n",
-    "                model = MarianMTModel.from_pretrained(model_name)\n",
-    "                self.loaded_models[model_name] = model\n",
-    "            except:\n",
-    "                pass\n",
+    "    def load_pipeline(self, model_name):\n",
+    "        if model_name not in self.loaded_pipelines:\n",
+    "            pipe = pipeline(\"translation\", model=model_name)\n",
+    "            self.loaded_pipelines[model_name] = pipe\n",
     "        else:\n",
-    "            model = self.loaded_models[model_name]\n",
-    "        return model\n",
+    "            pipe = self.loaded_pipelines[model_name]\n",
+    "            \n",
+    "        return pipe\n",
     "\n",
-    "    def load_tokenizer(self, model_name):\n",
-    "        if model_name not in self.loaded_models:\n",
-    "            try:\n",
-    "                tokenizer = MarianTokenizer.from_pretrained(model_name)\n",
-    "                self.loaded_tokenizers[model_name] = tokenizer\n",
-    "            except:\n",
-    "                pass\n",
-    "        else:\n",
-    "            tokenizer = self.loaded_tokenizers[model_name]\n",
-    "        return tokenizer\n",
-    "\n",
-    "    def get_model_name(self, input_language):\n",
-    "        if input_language in self.romance_languages:\n",
-    "            model_name = f\"Helsinki-NLP/opus-mt-ROMANCE-en\"\n",
-    "        else:\n",
-    "            model_name = f\"Helsinki-NLP/opus-mt-{input_language}-en\"\n",
-    "        return model_name\n",
+    "    def _get_model_name(self, lang):\n",
+    "        return self.pretrained_translators_names.get(lang)\n",
     "\n",
     "    def translate_to_english(self, text, lang):\n",
     "        if lang == 'en':\n",
     "            return text\n",
+    "        elif lang not in [k for k,v in pretrained_translators.items() if v is not None]:\n",
+    "            return ''\n",
     "\n",
-    "        model_name = self.get_model_name(lang)\n",
-    "        model = self.load_model(model_name)\n",
-    "        tokenizer = self.load_tokenizer(model_name)\n",
+    "        model_name = self._get_model_name(lang)\n",
+    "        pipe = self.load_pipeline(model_name)\n",
+    "        translation = pipe(text)\n",
+    "        return translation\n",
     "\n",
-    "        \n",
-    "        \n",
-    "        pass\n",
-    "\n",
-    "translator = MultiLingualTranslator()\n",
-    "\n",
+    "translator = MultiLingualTranslator(pretrained_translators_names)\n",
     "# how much time will this take?? is it even feasible ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'translation_text': 'Good morning I call myself the dumbest'}]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translator.translate_to_english('bom dia chamo me o mais burro', 'pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'translation_text': \"Good morning, I'm cold.\"}]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translator.translate_to_english('bom dia chamo-me frederico', 'pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deep_translator import GoogleTranslator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "translated = GoogleTranslator(source='pt', target='en').translate(\"bom dia chamo me frederico\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Good morning my name is Frederico'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translated"
    ]
   },
   {
