--- a/1-data-exploration-and-split.ipynb
+++ b/1-data-exploration-and-split.ipynb
@@ -32,12 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
+    "from tqdm import tqdm\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -58,7 +59,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "from transformers import pipeline, MarianMTModel, MarianTokenizer, AutoModelForSeq2SeqLM"
+    "from transformers import pipeline"
    ]
   },
   {
@@ -605,10 +606,10 @@
     "    text = re.sub(r'#(\\w+)', '', text)\n",
     "    return text\n",
     "\n",
+    "# not used\n",
     "def remove_or_replace_and(text):\n",
     "    if '&' in text:\n",
     "        text = re.sub(r'&', 'and', text)\n",
-    "\n",
     "\n",
     "def remove_numbers(text):\n",
     "    text = re.sub(r'\\d+', '', text)\n",
@@ -895,20 +896,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **N-Grams**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "- **Text Translation to English**"
    ]
   },
@@ -1008,12 +995,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "# possibility: https://huggingface.co/docs/transformers/model_doc/marian\n",
     "# multilingual translator: https://huggingface.co/datasets/Helsinki-NLP/opus-100\n",
+    "\n",
+    "# TODO checkout this lib: https://github.com/UKPLab/EasyNMT\n",
     "\n",
     "# can we use a sample to perform sentiment analysis?\n",
     "# but what about other the other languages when we want to do predictions?\n",
@@ -1035,59 +1024,63 @@
     "    def _get_model_name(self, lang):\n",
     "        return self.pretrained_translators_names.get(lang)\n",
     "\n",
-    "    def translate_to_english(self, text, lang):\n",
+    "    def translate_to_english(self, text, lang) -> str:\n",
     "        if lang == 'en':\n",
     "            return text\n",
     "        elif lang not in [k for k,v in pretrained_translators.items() if v is not None]:\n",
-    "            return ''\n",
+    "            return np.nan\n",
     "\n",
     "        model_name = self._get_model_name(lang)\n",
     "        pipe = self.load_pipeline(model_name)\n",
-    "        translation = pipe(text)\n",
+    "        # output of pipe is a list of dicts, e.g. [{'translation_text': '...'}]\n",
+    "        translation = pipe(text)[0][\"translation_text\"]\n",
     "        return translation\n",
     "\n",
+    "# it seems that translation affects some cleaning tasks\n",
+    "# e.g. adds puncation\n",
+    "# capitalizes some letters\n",
+    "# ... need to re-clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "translator = MultiLingualTranslator(pretrained_translators_names)\n",
-    "# how much time will this take?? is it even feasible ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'translation_text': 'Good morning I call myself the dumbest'}]"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "translator.translate_to_english('bom dia chamo me o mais burro', 'pt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'translation_text': \"Good morning, I'm cold.\"}]"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "translator.translate_to_english('bom dia chamo-me frederico', 'pt')"
+    "\n",
+    "def translate(text, lang, clean=True):\n",
+    "    # text might be null\n",
+    "    if pd.isna(text):\n",
+    "        return text\n",
+    "\n",
+    "    translation = translator.translate_to_english(text, lang)\n",
+    "\n",
+    "    # the class returns np.nan for languages without translator model\n",
+    "    if pd.isna(translation):\n",
+    "        return translation\n",
+    "\n",
+    "    if clean:\n",
+    "        # translation seems able to add punctuation\n",
+    "        # and capitalize some letters\n",
+    "        translation = remove_functional_punctuation(translation)\n",
+    "        translation = lower_case(translation)\n",
+    "    \n",
+    "    return translation\n",
+    "\n",
+    "# doing it this way just because of the tqdm\n",
+    "def apply_clean_translation_to_df(text_column, lang_column):\n",
+    "    new_col = []\n",
+    "    for text, lang in tqdm(zip(text_column, lang_column), total=len(text_column), desc=\"Translating text\"):\n",
+    "        translation = translate(text, lang)\n",
+    "        new_col.append(translation)\n",
+    "\n",
+    "\n",
+    "# ... takes an unfeasible amount of time\n",
+    "# train_info['translated_clean_description'] = apply_clean_translation_to_df(train_info['clean_description'], train_info['clean_description_lang'])\n",
+    "# train_info['translated_clean_host_about'] = apply_clean_translation_to_df(train_info['clean_host_abou'], train_info['clean_host_abou_lang'])\n",
+    "# train_info['translated_clean_comments'] = apply_clean_translation_to_df(train_reviews['clean_comments'], train_reviews['clean_comments_lang'])"
    ]
   },
   {
@@ -1096,36 +1089,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deep_translator import GoogleTranslator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "translated = GoogleTranslator(source='pt', target='en').translate(\"bom dia chamo me frederico\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Good morning my name is Frederico'"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "translated"
+    "# TODO maybe use this for translating other languages?\n",
+    "# if yes add it to class\n",
+    "\n",
+    "from deep_translator import GoogleTranslator\n",
+    "translated = GoogleTranslator(source='pt', target='en').translate(\"bom dia chamo me frederico\")\n",
+    "translated\n",
+    "\n",
+    "# ... also need to re-clean text\n",
+    "# ... also takes a lot of time"
    ]
   },
   {
