just added some commments

--- a/1-data-exploration-and-split.ipynb
+++ b/1-data-exploration-and-split.ipynb
@@ -1126,7 +1126,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# since translation might not be viable we can use the english reviews as a sample\n",
+    "# and do sentiment analysis on those?"
+   ]
   },
   {
    "cell_type": "markdown",
