sentiment analysis for the comments feature

--- a/1-data-exploration-and-split.ipynb
+++ b/1-data-exploration-and-split.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +44,15 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from scipy.stats import chi2_contingency\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import nltk\n",
+    "# nltk.download('all')\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import WordNetLemmatizer\n",
-    "from nltk.sentiment import SentimentIntensityAnalyzer\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
@@ -535,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +697,7 @@
      "text": [
       "No. of unique languages in clean_description_lang: 10\n",
       "No. of unique languages in clean_host_about_lang: 15\n",
-      "No. of unique languages in clean_comments_lang: 60\n"
+      "No. of unique languages in clean_comments_lang: 67\n"
      ]
     }
    ],
@@ -1106,7 +1108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Sentiment Analysis**"
+    "- **Sentiment Analysis of the 'comments' feature**"
    ]
   },
   {
@@ -1120,7 +1122,173 @@
     "# 2. machine learning-based\n",
     "# 3. pre-trained transformer-based deep learning\n",
     "\n",
-    "# ... maybe we only need the simplest method?"
+    "# ... maybe we only need the simplest method?\n",
+    "\n",
+    "# since translation might not be viable we can use the english reviews as a sample\n",
+    "# and do sentiment analysis on those?\n",
+    "\n",
+    "# example of lexicon-based sentiment analysis: https://www.datacamp.com/tutorial/text-analytics-beginners-nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of english ocurrences:\n",
+      "\t comments: 238351 / 361281\n"
+     ]
+    }
+   ],
+   "source": [
+    "en_comments = train_reviews.loc[train_reviews['clean_comments_lang'] == 'en', ['index', 'clean_comments']]  # later will merge with the unlisted feature\n",
+    "\n",
+    "print('No. of english ocurrences:')\n",
+    "print(f'\\t comments: {len(en_comments)}/{len(train_reviews)}')\n",
+    "\n",
+    "# ... shouldn't description and host_about have the exact same numbers?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# some pre processing functions, besides simple text cleaning, may help\n",
+    "# the accuracy of the sentiment analysis\n",
+    "\n",
+    "# instantiating outside of function to speed up process\n",
+    "en_stop_words = stopwords.words('english')\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "def preprocess_en_text(text):\n",
+    "\n",
+    "    # tokenizing the text\n",
+    "    tokens = word_tokenize(text)\n",
+    "\n",
+    "    # removing stop words\n",
+    "    filtered_tokens = [token for token in tokens if token not in en_stop_words]\n",
+    "\n",
+    "    # lemmatizing the tokens\n",
+    "    lemmatized_tokens = [lemmatizer.lemmatize(token) for token in filtered_tokens]\n",
+    "\n",
+    "    # joining the tokens back into a string\n",
+    "    processed_text = ' '.join(lemmatized_tokens)\n",
+    "\n",
+    "    return processed_text\n",
+    "\n",
+    "\n",
+    "en_comments['processed_comments'] = en_comments['clean_comments'].apply(preprocess_en_text)\n",
+    "\n",
+    "# ... takes around 2 min"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processed_comments_sentiment\n",
+      "1    221268\n",
+      "0     17083\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sentiment analyzer\n",
+    "\n",
+    "analyzer = SentimentIntensityAnalyzer()\n",
+    "\n",
+    "def get_sentiment(text):\n",
+    "    scores = analyzer.polarity_scores(text)\n",
+    "    # compound ranges from -1 to 1\n",
+    "    # compound > .5 instead of 0\n",
+    "    sentiment = 1 if scores['compound'] > .5 else 0\n",
+    "    return sentiment\n",
+    "\n",
+    "\n",
+    "en_comments['processed_comments_sentiment'] = en_comments['processed_comments'].apply(get_sentiment)\n",
+    "print(en_comments['processed_comments_sentiment'].value_counts())\n",
+    "\n",
+    "# ... takes around 2 min"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# re-structuring the df\n",
+    "\n",
+    "# there can be multiple comments for a house\n",
+    "# se we first should take the mode scores\n",
+    "# and then turn it to boolean like the rest\n",
+    "# (hence we did not want to convert to bool)\n",
+    "\n",
+    "def mode(series):\n",
+    "    mode = pd.Series.mode(series)\n",
+    "    if len(mode) > 1:\n",
+    "        mode = 0\n",
+    "    return mode\n",
+    "\n",
+    "en_comments = (\n",
+    "    en_comments\n",
+    "    .groupby('index')\n",
+    "    .agg({'processed_comments_sentiment': lambda x: mode(x)})\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "# merging with info df to get the unlisted feature\n",
+    "en_comments = en_comments.merge(train_info[['index', 'unlisted']],\n",
+    "                                on='index', how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-square statistic: 9.07502660414605\n",
+      "p-value: 0.002591238062242306\n",
+      "\n",
+      "Conclusion: Reject the null.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# chi-square test for independence\n",
+    "# H0: There is no significant relationship between Variable A and Variable B.\n",
+    "# vs.\n",
+    "# H1: There is a significant relationship between Variable A and Variable B\n",
+    "# therefore, rejecting the null suggests that there is evidence of an\n",
+    "# association between the variables.\n",
+    "\n",
+    "contingency_table = pd.crosstab(en_comments['processed_comments_sentiment'],\n",
+    "                                en_comments['unlisted'])\n",
+    "\n",
+    "chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "print(\"Chi-square statistic:\", chi2)\n",
+    "print(\"p-value:\", p)\n",
+    "# print(\"Degrees of freedom:\", dof)\n",
+    "# print(\"Expected frequencies:\")\n",
+    "# print(expected)\n",
+    "print(f\"\\nConclusion: {'Reject' if p < 0.05 else 'Fail to reject'} the null.\")"
    ]
   },
   {
@@ -1129,8 +1297,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# since translation might not be viable we can use the english reviews as a sample\n",
-    "# and do sentiment analysis on those?"
+    "# limitations\n",
+    "# ... english observations might not be representative of the whole data\n",
+    "# ... data cleaning / processing might cause bias\n",
+    "# ... reviews might put out mixed signals, e.g. bad review about property, positive reiew\n",
+    "#     about trip, 'apartment was awful but the city was mesmerizing', model might predict\n",
+    "#     positive sentiment.\n",
+    "# ... lack of accuracy of the sentiment analyser used\n",
+    "# ... lack of power of the chi-square test"
    ]
   },
   {
