--- a/1-data-exploration-and-split.ipynb
+++ b/1-data-exploration-and-split.ipynb
@@ -14,10 +14,6 @@
     "- Frederico Portela | R20181072 | r20181072@novaims.unl.pt\n",
     "- Pedro Carvalho | 20230554 | 20230554@novaims.unl.pt\n",
     "\n",
-    "\n",
-    "**In this notebook:**\n",
-    "1. Data Extraction from raw file.\n",
-    "\n",
     "**Index**\n",
     "1. [Library imports](#library_imports)\n",
     "2. ..."
@@ -134,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -307,8 +303,14 @@
     }
    ],
    "source": [
-    "train_info = pd.read_excel(TRAIN_INFO_PATH)\n",
-    "train_reviews = pd.read_excel(TRAIN_REVIEWS_PATH)\n",
+    "train_info_raw = pd.read_excel(TRAIN_INFO_PATH)\n",
+    "train_reviews_raw = pd.read_excel(TRAIN_REVIEWS_PATH)\n",
+    "\n",
+    "# during exploration we will transform the data\n",
+    "# we want to make them in a copy in order to not\n",
+    "# alter the original data\n",
+    "train_info = train_info_raw.copy()\n",
+    "train_reviews = train_reviews_raw.copy()\n",
     "\n",
     "print(f'Train info shape: {train_info.shape}')\n",
     "display(train_info.head())\n",
@@ -321,13 +323,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "# we might also want to check the test data to ensure compatibility\n",
-    "test_info = pd.read_excel(TEST_INFO_PATH)\n",
-    "test_reviews = pd.read_excel(TEST_REVIEWS_PATH)\n",
+    "test_info_raw = pd.read_excel(TEST_INFO_PATH)\n",
+    "test_reviews_raw = pd.read_excel(TEST_REVIEWS_PATH)\n",
+    "\n",
+    "test_info = test_info_raw.copy()\n",
+    "test_reviews = test_reviews_raw.copy()\n",
     "\n",
     "assert test_info.columns.tolist() == train_info.columns.tolist()[:-1], 'Test and train info columns do not match'\n",
     "assert test_reviews.columns.tolist() == train_reviews.columns.tolist(), 'Test and train reviews columns do not match'"
@@ -1311,39 +1316,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Data Merge (for both train and test datasets)**"
+    "#### **Data Merge (for both original train and test datasets)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train merged shape: (363284, 5)\n",
+      "Test merged shape: (42086, 4)\n"
+     ]
+    }
+   ],
    "source": [
+    "# Although during data exploration we have employed several\n",
+    "# pre-processing and feature engineering techniques the data\n",
+    "# split will be of the raw data since the techniques employed\n",
+    "# might be undone / new techniques might be employed later on.\n",
+    "\n",
     "# can we treat each property-guest review as independent?\n",
     "# ... IMO yes, since we reviews are not dated and therefore\n",
     "# we cannot establish a temporal relationship between them\n",
     "# e.g. if last 5 reviews are bad then house is more likely\n",
     "# to be unlisted.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# merging, for train and test datasets, info and reviews"
+    "\n",
+    "# merging, for train and test datasets, info and reviews\n",
+    "# no pre processing whatsoever!\n",
+    "\n",
+    "# merging both train datasets\n",
+    "train_merged = train_info_raw.merge(train_reviews_raw,\n",
+    "                                    on='index',\n",
+    "                                    how='outer')\n",
+    "\n",
+    "# merging both test sets\n",
+    "test_merged = test_info_raw.merge(test_reviews_raw,\n",
+    "                                  on='index',\n",
+    "                                  how='outer')\n",
+    "\n",
+    "# making sure all is good for both merged datasets\n",
+    "assert set(train_merged['index'].unique().tolist()) == set(train_info_raw['index'].unique().tolist() + train_reviews_raw['index'].unique().tolist()), 'Missing indexes in train_merged'\n",
+    "assert set(test_merged['index'].unique().tolist()) == set(test_info_raw['index'].unique().tolist() + test_reviews_raw['index'].unique().tolist()), 'Missing indexes in test_merged'\n",
+    "\n",
+    "print(f'Train merged shape: {train_merged.shape}')\n",
+    "print(f'Test merged shape: {test_merged.shape}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Train Data Split**\n",
-    "\n",
-    "Although during data exploration we have employed several pre-processing and feature engineering techniques the data split will be of the raw data since the techniques employed might be undone later on / new techniques might be employed."
+    "#### **Train Data Split**"
    ]
   },
   {
@@ -1352,9 +1379,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train-val-test split\n",
     "# due to sheer amount of data k-fold cross-validation will not be feasible\n",
-    "\n",
+    "# so a train-val-test split is preferred\n",
     "\n",
     "# TODO rewrite this code\n",
     "\n",
@@ -1369,21 +1395,21 @@
     "#     \"\"\" \n",
     "#     return (test_p, 1-(train_p/(1-test_p)))\n",
     "\n",
-    "# test_size_1, test_size_2 = two_step_proportions(.7, .15, .15)\n",
+    "# test_size_1, test_size_2 = two_step_proportions(.8, .1, .1)\n",
     "\n",
     "# X_train_val, X_test, y_train_val, y_test = train_test_split(X,\n",
     "#                                                             y,\n",
     "#                                                             test_size=test_size_1,\n",
     "#                                                             shuffle=True,\n",
     "#                                                             stratify=y,\n",
-    "#                                                             random_state=42)\n",
+    "#                                                             random_state=SEED)\n",
     "\n",
     "# X_train, X_val, y_train, y_val = train_test_split(X_train_val,\n",
     "#                                                   y_train_val,\n",
     "#                                                   test_size=test_size_2,\n",
     "#                                                   shuffle=True,\n",
     "#                                                   stratify=y_train_val,\n",
-    "#                                                   random_state=42)\n",
+    "#                                                   random_state=SEED)\n",
     "\n",
     "# get_prop = lambda d: round(len(d) / len(X) * 100, 2)\n",
     "# print('Dataset shapes:')\n",
