--- a/1-data-exploration-and-split.ipynb
+++ b/1-data-exploration-and-split.ipynb
@@ -1375,49 +1375,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset shapes:\n",
+      "\tTrain: 290626 (80.0%)\n",
+      "\tVal: 36329 (10.0%)\n",
+      "\tTest: 36329 (10.0%)\n",
+      "\n",
+      "Total observations: 363284\n"
+     ]
+    }
+   ],
    "source": [
     "# due to sheer amount of data k-fold cross-validation will not be feasible\n",
     "# so a train-val-test split is preferred\n",
     "\n",
     "# TODO rewrite this code\n",
     "\n",
-    "# X = images.copy()\n",
-    "# y = [pathlib.Path(path).parts[2] for path in images].copy()\n",
+    "X = train_merged[[col for col in train_merged.columns if col != 'unlisted']]\n",
+    "y = train_merged['unlisted']\n",
     "\n",
-    "# def two_step_proportions(train_p, val_p, test_p):\n",
-    "#     \"\"\"\n",
-    "#     Since we need to split the data in two steps\n",
-    "#     this function returns the proportions of the\n",
-    "#     'test_size' arg. needed to get the true prop.\n",
-    "#     \"\"\" \n",
-    "#     return (test_p, 1-(train_p/(1-test_p)))\n",
+    "def two_step_proportions(train_p, val_p, test_p):\n",
+    "    \"\"\"\n",
+    "    Since we need to split the data in two steps\n",
+    "    this function returns the proportions of the\n",
+    "    'test_size' arg. needed to get the true prop.\n",
+    "    \"\"\" \n",
+    "    return (test_p, 1-(train_p/(1-test_p)))\n",
     "\n",
-    "# test_size_1, test_size_2 = two_step_proportions(.8, .1, .1)\n",
+    "test_size_1, test_size_2 = two_step_proportions(.8, .1, .1)\n",
     "\n",
-    "# X_train_val, X_test, y_train_val, y_test = train_test_split(X,\n",
-    "#                                                             y,\n",
-    "#                                                             test_size=test_size_1,\n",
-    "#                                                             shuffle=True,\n",
-    "#                                                             stratify=y,\n",
-    "#                                                             random_state=SEED)\n",
+    "X_train_val, X_test, y_train_val, y_test = train_test_split(X,\n",
+    "                                                            y,\n",
+    "                                                            test_size=test_size_1,\n",
+    "                                                            shuffle=True,\n",
+    "                                                            stratify=y,\n",
+    "                                                            random_state=SEED)\n",
     "\n",
-    "# X_train, X_val, y_train, y_val = train_test_split(X_train_val,\n",
-    "#                                                   y_train_val,\n",
-    "#                                                   test_size=test_size_2,\n",
-    "#                                                   shuffle=True,\n",
-    "#                                                   stratify=y_train_val,\n",
-    "#                                                   random_state=SEED)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_train_val,\n",
+    "                                                  y_train_val,\n",
+    "                                                  test_size=test_size_2,\n",
+    "                                                  shuffle=True,\n",
+    "                                                  stratify=y_train_val,\n",
+    "                                                  random_state=SEED)\n",
     "\n",
-    "# get_prop = lambda d: round(len(d) / len(X) * 100, 2)\n",
-    "# print('Dataset shapes:')\n",
-    "# print(f'\\tTrain: {len(X_train)} ({get_prop(X_train)}%)')\n",
-    "# print(f'\\tVal: {len(X_val)} ({get_prop(X_val)}%)')\n",
-    "# print(f'\\tTest: {len(X_test)} ({get_prop(X_test)}%)')\n",
-    "# print(f\"\\nTotal observations: {len(X)}\")"
+    "get_prop = lambda d: round(len(d) / len(X) * 100, 2)\n",
+    "print('Dataset shapes:')\n",
+    "print(f'\\tTrain: {len(X_train)} ({get_prop(X_train)}%)')\n",
+    "print(f'\\tVal: {len(X_val)} ({get_prop(X_val)}%)')\n",
+    "print(f'\\tTest: {len(X_test)} ({get_prop(X_test)}%)')\n",
+    "print(f\"\\nTotal observations: {len(X)}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Saving Test and Train-Splits**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# instead of always having to merge and split the data\n",
+    "# can just do it once and save it to csv and later just\n",
+    "# import it\n",
+    "\n",
+    "# saving test_merged\n",
+    "test_dir = os.path.join('corpora', 'test-data')\n",
+    "if not os.path.isdir(test_dir):\n",
+    "    os.makedirs(test_dir)\n",
+    "    test_merged.to_csv(os.path.join(test_dir, 'real_test.csv'), index=False)\n",
+    "else:\n",
+    "    print('Test dir. already exists!')\n",
+    "\n",
+    "\n",
+    "# saving train_merged splits\n",
+    "train_merged_train = X_train.copy()\n",
+    "train_merged_train['unlisted'] = y_train\n",
+    "\n",
+    "train_merged_val = X_val.copy()\n",
+    "train_merged_val['unlisted'] = y_val\n",
+    "\n",
+    "train_merged_test = X_test.copy()\n",
+    "train_merged_test['unlisted'] = y_test\n",
+    "\n",
+    "train_dir = os.path.join('corpora', 'train-data')\n",
+    "if not os.path.isdir(train_dir):\n",
+    "    os.makedirs(train_dir)\n",
+    "    train_merged_train.to_csv(os.path.join(train_dir, 'train.csv'), index=False)\n",
+    "    train_merged_val.to_csv(os.path.join(train_dir, 'val.csv'), index=False)\n",
+    "    train_merged_test.to_csv(os.path.join(train_dir, 'test.csv'), index=False)\n",
+    "else:\n",
+    "    print('Test dir. already exists!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
